spacex-dragon/assets/css/style.css
html
/* ---- CSS Demo ---- */

/*  ---------------Box Sizing-----------------  */

html {
  box-sizing: border-box;
}
*,
*:before,
*:after {
  box-sizing: inherit;
}


/*  --------------- Global Styles -----------------  */
/*----Utility styles----*/
.container {
  width: 80vw;
  margin: 40px auto; 
  max-width: 900px;
}
body{
 font-family: sans-serif;
  font-weight: 400;
  font-style: normal;
margin:0; 
}
/*---responsive img------*/
img{
  max-width: 100%;
  height:auto;
  overflow-clip-margin: content-box;
  overflow:clip;
}
body{
  font-family: sans-serif;
  font-weight: 400;
  font-style: normal;
margin:0; 
}
.replace-spacex {
  width: 750px;
  height: 140px;
  background-image: url("https://lh3.googleusercontent.com/u/1/drive-viewer/AKGpihaP6uIvn-_prpIzfsgOApEdDXbszBqtynK7VmKV6rzhQkgXgrQWMPBh11TEJmtX81ealots77dSlVoKUY4UAl5wRSat6gfPKxpVpwiOWfqDkvMbtWPdyXR0NZDi8eP8Gw=w958-h909-v0");
  margin:  0auto;
  text-indent: 100%;
  white-space: nowrap;
  overflow: hidden;
  display: block;
  
  
}
 
header.primary {
   background: url("https://lh3.googleusercontent.com/u/1/drive-viewer/AKGpihbRytoCjpm3BNsxTOx4HH1sJcx6ta2KxOwLT3rT9egdiIldnxfwZLW-ypd_0sUlEJQfvmJn4fSX9rcfAbLViqQKZucLClz-eepyzicqJ89he1rxHM1tNAX1tpI8Y8iK=w728-h909-v0");
   background-size:cover;
   position:absolute;
background-color: #3b638b;
color:#ffffff; 
text-align:center;  
text-shadow:2px 2px #000000;
/*long form*/
padding-top: 40px;
padding-right: 40px;
padding-bottom: 40px;
padding-left: 40px;  
/*Single value short hand*/  
padding:40px;  
/* T,R,B,L */
padding: 20px 40px 20px 40px;  
/* Two Value Top/Bottom / L/R */
padding: 20px 40px;  
}

header.primary h1 {
  font-size: 2.4rem;
  margin:20px 0 0;
  position: relative;
}

header.primary h1 a{
  color:#ffffff;
  text-decoration:none;
  position: relative;
}

header.primary h2 {
  margin:0;
  font-size: 2.4rem;
  position: relative;
}

header.primary nav{
  max-width:400px;
  margin: 20px auto;
  position: relative;
}

header.primary ul {
  padding:30px 0;
  display:flex;
  flex-direction: row;
  justify-content:space-around;
  position: relative;
}

header.primary nav li{
  list-style-type:none;
  padding:0;
  width:20%;
  position: relative;
}

header.primary nav a:link,
header.primary nav a:visited {
  color:white;
  text-decoration:none;
  background-color:#000000;
  background-color:rgba(142,166,184,0.4);
  padding:8px 16px;
  border-radius: 10px;
  display:block;
  transition:0.6s;
  position: relative;
  
}

header.primary nav a:hover,
header.primary nav a:active{
  background-color:rgba(51,83,107,.8);
  
}
/*------Content----*/
section#content {
  padding: 4em 0;
}
section#content h2 {
 font-family: sans-serif, cursive;
 font-size: 2.2em;
  color: #33536b;
  text-align: center;
}

/*------article-----*/
Section#articles{
  background: #181c1f;
  }
section#articles .container {
  display:flex;
  flex-direction:row;
  justify-content:space-between;
  flex-wrap:wrap;
  border-bottom: 1px solid #c0c0c0;
  padding: 0 0 4em 0;
}
section#articles h2, #content h2{
  flex: 0 0 100%;
  color: #33536b;
  text-align:center;
  font-family: sans-serif;
  font-size:2em;
}
section#articles h2{
  color:#fff;
  text-shadow: 2px 2px #000;
}
#articles article.post{
  width:30%;
  box-shadow: 0 4px 0px rgba(0,0,0,0.4);
  padding: 10px;
  transition: 0.6s;
  font-size: 0.8rem;
  background: #fff;
}
#articles article.post h2{
  font-size: 1.5px;
  font-family: sans-serif;
  text-shadow:none;
}
#articles article.post:hover{
  box-shadow: 0 8px 16px rgba(0,0,0,0.4);
}
#articles article time,
#articles article figcaption,
#articles article footer{
  font-size: 0.8em;
  color:#c0c0c0;
  text-transform: uppercase;
}
#articles .post a:link,
#articles .post s:visited{
  color:#3b638b;
}
#articles .post figure{
  margin: 0;
}
#articles .post figure {
  margin: 0;
}
#articles .post img{
  border-radius: 10px;
}
#articles ul{
  padding: 0 20px;
}
#articles li {
  margin-bottom: 20px;
}
#articles .post img{
 Border-radius: 10px;
}

/*----hero----*/
.img-center{
  display:block;
  margin:20px auto;
  border: 1px solid #c0c0c0;
  padding:5px;
}
/*----aside----*/
aside[role="complementary"]{
  background-color:#181c1f;
  color:#ffffff;
  padding:2.5em;
}
aside .container {
  display:flex;
  flex-direction:row;
  justify-content:space-around;
}
aside article.widget{
  width:40%;
}
.widget.Overview table {
  font-size:0.7em;
  border-collapse:collapse;
}
.widget.Overview table td {
  border-bottom: 1px solid #fff;
  padding: 10px;
}
.widget.overview table td:nth-child(even) {
  text-align: right;
}
aside article a:link, aside article a:visited {
  color:#ffffff;
  display:block;
  margin-top:1.2em;
  letter-spacing: 1.2px;
}
aside article footer {
  display: none;
}
aside article a:hover, 
aside article a:active{
  text-decoration: none;
}
aside article footer{
  display:none;
}
footer {background-color: #1b2c38;
}
#colophon h6{
  padding:20px;
  margin:0;
  color:#fff;
  text-align:center;
  text-transform:uppercase;
  }

